prod_snapshot_2015-09-24_1030/objects/User.object
<CustomObject>
    <fields>
        <fullName>AM_Follow_Up_Tasks__c</fullName>
        <description>This is used in conjunction with the Account Manager field on the Company record to control the automatic follow up tasks creation.</description>
        <inlineHelpText>Select Yes if this user is to receive follow up tasks automatically if chosed as the account manager on a company record.</inlineHelpText>
        <label>AM Follow Up Tasks</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AM_Market__c</fullName>
        <label>AM Market</label>
        <picklist>
            <picklistValues>
                <fullName>Appleton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asheville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Binghamton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brevard County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buffalo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burlington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Jersey, NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Ohio, MNCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Wisconsin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cincinnati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleveland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Des Moines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detroit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fort Collins, CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ft Myers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grand Rapids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Bay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greensboro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greenville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indianapolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jackson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jacksonville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jersey Shore, NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knoxville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lafayette, IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lafayette, LA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conf_Number__c</fullName>
        <label>Conf Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_Approver__c</fullName>
        <label>DC Approver</label>
        <relationshipName>DCApprovee</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Default_PM__c</fullName>
        <description>Default PM (For Account Managers Only).</description>
        <inlineHelpText>This User will be populate the PM User Field on the opportunity when the Account Manager is added</inlineHelpText>
        <label>Default PM</label>
        <relationshipName>AcctManagerDefaultPM</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Display_Role__c</fullName>
        <formula>UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Login__c</fullName>
        <label>First Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Five9_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Five9 User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Change_Date__c</fullName>
        <label>HR Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HR_Department__c</fullName>
        <label>HR Department</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Employee_ID__c</fullName>
        <externalId>true</externalId>
        <label>HR Employee ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Manager_ID__c</fullName>
        <label>HR Manager ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Manager_Name__c</fullName>
        <label>HR Manager Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Original_Hire_Date__c</fullName>
        <label>HR Original Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HR_Position_Date__c</fullName>
        <label>HR Position Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HR_Status_Date__c</fullName>
        <label>HR Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HR_Status_Full__c</fullName>
        <label>HR Status Full</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Status__c</fullName>
        <label>HR Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HR_Title__c</fullName>
        <label>HR Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HerHim__c</fullName>
        <formula>IF(TEXT(SheHe__c) = &quot;She&quot;,&quot;her&quot;,&quot;him&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HerHim</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inside_Outside_Sales__c</fullName>
        <label>Inside/Outside Sales</label>
        <picklist>
            <picklistValues>
                <fullName>Inside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Login_Custom__c</fullName>
        <label>Last Login Custom</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Needed_KPI__c</fullName>
        <formula>IF(Text_of_ISS_OSS__c = &quot;Inside&quot;, Day(Today()) * (5/7), Day(Today()) * (4/7))</formula>
        <label>Needed KPI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Period_KPI__c</fullName>
        <formula>Sales_KPI__c * 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period KPI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <formula>Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Approver__c</fullName>
        <label>Request Approver</label>
        <relationshipName>Approval</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Role_Report_To__c</fullName>
        <label>Role Report To</label>
        <relationshipName>Role_Report</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Sales_KPI__c</fullName>
        <label>Sales KPI</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SheHe__c</fullName>
        <label>SheHe</label>
        <picklist>
            <picklistValues>
                <fullName>He</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>She</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Text_of_ISS_OSS__c</fullName>
        <formula>TEXT(Inside_Outside_Sales__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Text of ISS/OSS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Full_Name__c</fullName>
        <formula>LastName &amp; &quot;,&quot; &amp; FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X800_Number__c</fullName>
        <description>InsideSales Inbound Phone Number</description>
        <label>800 Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>dc_approver_01__c</fullName>
        <description>no longer used per the new market object / affiliation of the opportunities.  should be able to remove this field/relationship.  (01/06/2014)</description>
        <label>DC Approver 01</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Allow_Delegated_Sending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EchoSign - Allow Sending As Other Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Email_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates that the user&apos;s email address has been validated in EchoSign API.</description>
        <inlineHelpText>This checkbox indicates that the user&apos;s email address has been validated in EchoSign API.</inlineHelpText>
        <label>EchoSign Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>herselfhimself__c</fullName>
        <formula>IF(TEXT(SheHe__c) = &quot;She&quot;,&quot;herself&quot;,&quot;himself&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>herselfhimself</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingAnonWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingAnonWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingBestBets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingBestBets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingEmailActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingEmailActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingGroupedWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingGroupedWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingInterestingMomentsList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingInterestingMomentsList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingScoringList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingScoringList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingStreamList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingStreamList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWatchList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWatchList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight_Counter__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Marketo Sales Insight Welcome Counter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>newspaper_broadcast_affiliate__c</fullName>
        <label>Newspaper/Broadcast Affiliate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__InsideSales_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the user is an admin of the InsideSales system.</description>
        <label>InsideSales Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__is_subdomain__c</fullName>
        <label>InsideSales Subdomain</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__is_token__c</fullName>
        <label>InsideSales Authorization Token</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__password__c</fullName>
        <label>InsideSales Password</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__permissions__c</fullName>
        <label>InsideSales Permissions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>qbdialer__username__c</fullName>
        <label>InsideSales Username</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AAActives</fullName>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>Role_Report_To__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>MANAGER</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AA Actives</label>
    </listViews>
    <listViews>
        <fullName>ABRoleReportTo</fullName>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Role_Report_To__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>MANAGER</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>startsWith</operation>
            <value>DC AE</value>
        </filters>
        <label>AB Role Report To</label>
    </listViews>
    <listViews>
        <fullName>ActiveAreaManagers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>DC_Approver__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>DC AM</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active DC Area Managers</label>
    </listViews>
    <listViews>
        <fullName>ActiveRegMgrs</fullName>
        <columns>FULL_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>DC_Approver__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>DC Regional Manager</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active DC Reg Mgrs</label>
    </listViews>
    <listViews>
        <fullName>ActiveUsersDCGL</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>SFCONTENT_USER</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>DC Gannett Local</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active DC GL</label>
    </listViews>
    <listViews>
        <fullName>ActiveUsersDCGL2</fullName>
        <columns>FULL_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>DC_Approver__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DC_Approver__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>DC_Approver__c</field>
            <operation>notEqual</operation>
            <value>Rianne Burch</value>
        </filters>
        <label>Active DC GL Users2</label>
    </listViews>
    <listViews>
        <fullName>ActiveUsersDCNat</fullName>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>FULL_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>DC_Approver__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>startsWith</operation>
            <value>DC</value>
        </filters>
        <label>Active DC Nat Users</label>
    </listViews>
    <listViews>
        <fullName>Active_Chatter</fullName>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Role_Report_To__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Chatter Only User,Chatter External User,Chatter Free User</value>
        </filters>
        <label>AA_Active Chatter</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>STORAGE_USED</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Admin</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Chicken</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllAMUsers</fullName>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>AM_Market__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Account manager</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All GL AM Users</label>
    </listViews>
    <listViews>
        <fullName>AllActiveUsersAEs</fullName>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>SFCONTENT_USER</columns>
        <columns>DC_Approver__c</columns>
        <columns>Role_Report_To__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>AM_Market__c</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>DC AE</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Users - AEs</label>
    </listViews>
    <listViews>
        <fullName>AllActiveUsersAMs</fullName>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>SFCONTENT_USER</columns>
        <columns>DC_Approver__c</columns>
        <columns>Role_Report_To__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>AM_Market__c</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>DC AM</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Users - AMs</label>
    </listViews>
    <listViews>
        <fullName>AllInActiveUsersAEs</fullName>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>DC_Approver__c</columns>
        <columns>Role_Report_To__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>AM_Market__c</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>DC AE</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Inactive Users - AEs</label>
    </listViews>
    <listViews>
        <fullName>All_Inactive_DC_Users</fullName>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>DC_Approver__c</columns>
        <columns>Role_Report_To__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>AM_Market__c</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>dealchicken.com</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Inactive DC Users</label>
    </listViews>
    <listViews>
        <fullName>All_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_BY_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <namedFilters>
        <fullName>Opportunity_00NF0000008NcrMMAS</fullName>
        <active>false</active>
        <field>Opportunity.DC_Share__c</field>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>startsWith</operation>
            <value>DC AE</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Opportunity_User</name>
    </namedFilters>
    <namedFilters>
        <fullName>Opportunity_00NF0000008qQUFMA2</fullName>
        <active>true</active>
        <field>Opportunity.Dig_Project_Manager__c</field>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Digital Project Manager</value>
        </filterItems>
        <infoMessage>Select the Digital Project Manager</infoMessage>
        <isOptional>true</isOptional>
        <name>Opportunity_Dig - Project Manager</name>
    </namedFilters>
    <namedFilters>
        <fullName>User_00NF0000008qQU5MAM</fullName>
        <active>true</active>
        <field>User.Default_PM__c</field>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Digital Project Manager</value>
        </filterItems>
        <infoMessage>Select Default Project Manager For this AM</infoMessage>
        <isOptional>true</isOptional>
        <name>User_Default PM</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IA0000000HS5GMAW_00NF0000008MIBuMAO</fullName>
        <active>true</active>
        <field>Order_Fulfillment__c.Claimed_By__c</field>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Ad Support - CIN</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Order Fulfillment_Claimed By</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IA0000001nf2RMAQ_00NF0000008PUeFMAW</fullName>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <field>RequestsIssues__c.Transfer_From__c</field>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>true</value>
        </filterItems>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>false</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Systems_Transfer From</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IF0000001ocFNMAY_00NF0000008NNpjMAG</fullName>
        <active>true</active>
        <field>STARZ__c.Nominee__c</field>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>notContain</operation>
            <value>&quot;DC AE&quot;,&quot;DC AM&quot;</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>STARZ_Nominee</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IF0000001ocFNMAY_00NF0000008NNsdMAG</fullName>
        <active>true</active>
        <field>STARZ__c.Supervisor__c</field>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>notContain</operation>
            <value>&quot;DC AE&quot;,&quot;DC AM&quot;</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>STARZ_Supervisor</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IF0000001ol1pMAA_00NF0000008PMiNMAW</fullName>
        <active>true</active>
        <errorMessage>Active User not found</errorMessage>
        <field>Job_Position__c.Supervisor__c</field>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>true</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Job Position_Supervisor</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_Opportunity_00NF0000008NdXwMAK</fullName>
        <active>true</active>
        <field>Opportunity.Lead_Gen_Rep__c</field>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00eF0000000eJ2OIAU</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>nf_Opportunity_00NF0000008NdXwMAK</name>
    </namedFilters>
    <validationRules>
        <fullName>Field_Edit_Limit_1</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(PRIORVALUE( CompanyName ) = CompanyName)</errorConditionFormula>
        <errorDisplayField>CompanyName</errorDisplayField>
        <errorMessage>You Cannot Edit Company Name</errorMessage>
    </validationRules>
</CustomObject>